--- a/src/main/resources/view/loginView.fxml
+++ b/src/main/resources/view/loginView.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane prefHeight="200.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="WeanWatch.controller.loginCtrl">
+<BorderPane prefHeight="200.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="WeanWatch.controller.LoginCtrl">
    <center>
       <VBox alignment="CENTER" maxWidth="400.0" minWidth="400.0" prefHeight="400.0" prefWidth="400.0" spacing="10.0" BorderPane.alignment="CENTER">
          <children>
