--- a/src/main/resources/view/MetaphoricHandlerView.fxml
+++ b/src/main/resources/view/MetaphoricHandlerView.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.VBox?>
 
 
-<VBox fx:id="figureVBox" minHeight="400.0" minWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="WeanWatch.controller.MetaphoricHandlerCtrl">
+<VBox fx:id="FigureVBox" minHeight="400.0" minWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="WeanWatch.controller.MetaphoricHandlerCtrl">
    <children>
       <HBox fx:id="FigureHBox" minHeight="200.0">
          <children>
