--- a/src/main/resources/view/RootView.fxml
+++ b/src/main/resources/view/RootView.fxml
@@ -9,14 +9,13 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <BorderPane xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="WeanWatch.controller.RootCtrl">
    <top>
       <BorderPane BorderPane.alignment="CENTER">
          <right>
             <HBox alignment="CENTER_RIGHT" BorderPane.alignment="CENTER_RIGHT">
                <children>
-                  <Button onAction="#handleLogoutClick" mnemonicParsing="false" text="Logout">
+                  <Button mnemonicParsing="false" onAction="#handleLogoutClick" text="Logout">
                      <font>
                         <Font size="20.0" />
                      </font>
@@ -35,19 +34,19 @@
                <children>
                   <VBox alignment="CENTER_LEFT" spacing="10.0">
                      <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Karsten the clinician">
+                        <Text fx:id="clinicianID" strokeType="OUTSIDE" strokeWidth="0.0" text="clinicianID">
                            <font>
                               <Font size="20.0" />
                            </font>
                         </Text>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Poul the patient">
+                        <Text fx:id="patientID" strokeType="OUTSIDE" strokeWidth="0.0" text="patientID">
                            <font>
                               <Font size="20.0" />
                            </font>
                         </Text>
                      </children>
                   </VBox>
-                  <Button onAction="#handleSelectedPatientClick" mnemonicParsing="false" text="Select patient">
+                  <Button mnemonicParsing="false" onAction="#handleSelectedPatientClick" text="Select patient">
                      <font>
                         <Font size="20.0" />
                      </font>
@@ -55,7 +54,7 @@
                         <Insets left="10.0" />
                      </HBox.margin>
                   </Button>
-                  <Button onAction="#handleShowOverviewClick" mnemonicParsing="false" text="Overview">
+                  <Button mnemonicParsing="false" onAction="#handleShowOverviewClick" text="Overview">
                      <font>
                         <Font size="20.0" />
                      </font>
