--- a/src/main/resources/view/RootView.fxml
+++ b/src/main/resources/view/RootView.fxml
@@ -2,12 +2,12 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
 <BorderPane xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="WeanWatch.controller.RootCtrl">
    <top>
@@ -34,16 +34,16 @@
                <children>
                   <VBox alignment="CENTER_LEFT" spacing="10.0">
                      <children>
-                        <Text fx:id="clinicianID" strokeType="OUTSIDE" strokeWidth="0.0" text="clinicianID">
+                        <Label fx:id="clinicianID" text="clinicianID">
                            <font>
                               <Font size="20.0" />
                            </font>
-                        </Text>
-                        <Text fx:id="patientID" strokeType="OUTSIDE" strokeWidth="0.0" text="patientID">
+                        </Label>
+                        <Label fx:id="patientID" text="patientID">
                            <font>
                               <Font size="20.0" />
                            </font>
-                        </Text>
+                        </Label>
                      </children>
                   </VBox>
                   <Button mnemonicParsing="false" onAction="#handleSelectedPatientClick" text="Select patient">
